fixed some typos breaking my styling

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
     <title>Bradley Collins</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link media="all" type="text/css" rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-
-
-
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+    
+</head>
   <body>
 
   	<header>
@@ -37,9 +36,12 @@
   		</div>
   	</div>
 
+  	<footer>
+  		Footer
+  	</footer>
 
 
 
-  </body
+  </body>
 </html>
 
