added CR text to footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link media="all" type="text/css" rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-    
+
 </head>
   <body>
 
@@ -37,7 +37,9 @@
   	</div>
 
   	<footer>
-  		Footer
+  		<div id="copy_text">
+  			<p>Copyright 2018 | Bradley Collins</p>
+  		</div>
   	</footer>
 
 
