updated some images and removed ones not being used

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Henny+Penny" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 </head>
   <body>
@@ -27,13 +28,13 @@
   			<p>Project Manager <i class="fas fa-arrows-alt-h"></i> Front-End Dev</p>
   		</div>
   		<div id="build">
-  			<a href="#"><img src="img/build.jpg" /></a>
+  			<a href="#"><img src="img/build_mask.jpg" /></a>
   		</div>
   		<div id="game">
-  			<a href="#"><img src="img/games.png" /></a>
+  			<a href="#"><img src="img/mario2.jpg" /></a>
   		</div>
   		<div id="about_me">
-  			<a href="#"><img src="img/beach.jpg" /></a>
+  			<a href="#"><img src="img/beach_mask.jpg" /></a>
   		</div>
   	</div>
 
