messing around with gifs

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   		<div id="banner_content">
   			<h1>Bradley Collins</h1>
   			<p>Project Manager <i class="fas fa-arrows-alt-h"></i> Front-End Dev</p>
+              <img class="gifs" src="img/stars.gif" />
+              <img class="gifs" src="img/mario.gif" />
   		</div>
   		<div id="build">
   			<a href="#"><img src="img/build_mask.jpg" /></a>
