--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
   		<div id="banner_content">
   			<h1>Bradley Collins</h1>
   			<p>Project Manager <i class="fas fa-arrows-alt-h"></i> Front-End Dev</p>
-              <img class="gifs" src="img/stars.gif" />
-              <img class="gifs" src="img/mario.gif" />
   		</div>
   		<div id="build">
-  			<a href="#"><img src="img/build_mask.jpg" /></a>
+  			<a href="#"><img src="img/build2.png" /></a>
+        <p class="icon_text">What I've Built</p>
   		</div>
   		<div id="game">
-  			<a href="#"><img src="img/mario2.jpg" /></a>
+  			<a href="#"><img src="img/xbox_c.png" /></a>
+        <p class="icon_text">What I'm Playing</p>
   		</div>
   		<div id="about_me">
-  			<a href="#"><img src="img/beach_mask.jpg" /></a>
+  			<a href="#"><img src="img/beach2.png" /></a>
+        <p class="icon_text">About Me</p>
   		</div>
   	</div>
 
