--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 </head>
   <body>
 
-  	<header>
+  	<!-- <header>
   		<a href="#">Home</a>
   		<a href="#">What I've Built</a>
   		<a href="#">What I'm Playing</a>
   		<a href="#">What I Do</a>
-  	</header>
+  	</header> -->
 
   	<div class="container">
   		<div id="banner_content">
   			<h1>Bradley Collins</h1>
-  			<p>Project Manager <i class="fas fa-arrows-alt-h"></i> Front-End Dev</p>
+  			<p>Project Manage <i class="fas fa-arrows-alt-h"></i> Front-End Dev</p>
   		</div>
   		<div id="build">
   			<a href="#"><img src="img/build2.png" /></a>
