wroking on what ive built page

--- a/what-ive-built.html
+++ b/what-ive-built.html
@@ -23,7 +23,42 @@
   	</header>
 
   	<div class="container">
-  			<img src="img/build2.png" />
+  			<img class="banner_image" src="img/build_mask_3.jpg" />
+          <div id="middle_row_1">
+            <div id="col1row1">
+            <img src="img/jasmine.png" />
+            <div id="port_link">
+              <a href="https://bradleycollins.github.io/jasmine_bootstrap/">www.JasmineAdamsLCSW.net</a>
+            </div>
+          </div>
+        </div>
+
+          <div id="middle_row_2">
+            <div id="col1row1">
+              <img src="img/jasmine.png" />
+            <div id="port_link">
+              <a href="https://bradleycollins.github.io/jasmine_bootstrap/">www.JasmineAdamsLCSW.net</a>
+            </div>
+          </div>
+        </div>
+
+          <div id="middle_row_3">
+            <div id="col1row1">
+              <img src="img/jasmine.png" />
+            <div id="port_link">
+              <a href="https://bradleycollins.github.io/jasmine_bootstrap/">www.JasmineAdamsLCSW.net</a>
+            </div>
+          </div>
+        </div>
+
+          <div id="middle_row_4">
+            <div id="col1row1">
+              <img src="img/jasmine.png" />
+            <div id="port_link">
+              <a href="https://bradleycollins.github.io/jasmine_bootstrap/">www.JasmineAdamsLCSW.net</a>
+            </div>
+          </div>
+        </div>
 
     </div>
 
