updated nav links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   			<p>Project Manage <i class="fas fa-arrows-alt-h"></i> Front-End Dev</p>
   		</div>
   		<div id="build">
-  			<a href="#"><img src="img/build2.png" /></a>
+  			<a href="what-ive-built.html"><img src="img/build2.png" /></a>
         <p class="icon_text">What I've Built</p>
   		</div>
   		<div id="game">
