--- a/what-ive-built.html
+++ b/what-ive-built.html
@@ -16,7 +16,7 @@
   <body>
 
   	<header>
-  		<a href="#">Home</a>
+  		<a href="index.html">Home</a>
   		<a href="#">What I've Built</a>
   		<a href="#">What I'm Playing</a>
   		<a href="#">What I Do</a>
