style and color updates to inner page

--- a/what-ive-built.html
+++ b/what-ive-built.html
@@ -23,6 +23,7 @@
   	</header>
 
   	<div class="container">
+      <h1>What I've Built</h1>
   			<img class="banner_image" src="img/build_mask_3.jpg" />
           <div id="middle_row_1">
             <div id="col1row1">
