--- a/what-ive-built.html
+++ b/what-ive-built.html
@@ -24,7 +24,7 @@
 
   	<div class="container">
       <h1>What I've Built</h1>
-  			<img class="banner_image" src="img/build_mask_3.jpg" />
+  			<img class="banner_image" src="img/build3.png" />
           <div id="middle_row_1">
             <div id="col1row1">
             <img src="img/jasmine.png" />
