added what im playing page

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   	<div class="container">
   		<div id="banner_content">
   			<h1>Bradley Collins</h1>
-  			<p>Project Manage <i class="fas fa-arrows-alt-h"></i> Front-End Dev</p>
+  			<p>Project Manager <i class="fas fa-arrows-alt-h"></i> Front-End Dev</p>
   		</div>
   		<div id="build">
   			<a href="what-ive-built.html"><img src="img/build2.png" /></a>
         <p class="icon_text">What I've Built</p>
   		</div>
   		<div id="game">
-  			<a href="#"><img src="img/xbox_c.png" /></a>
+  			<a href="what-im-playing.html"><img src="img/xbox_c.png" /></a>
         <p class="icon_text">What I'm Playing</p>
   		</div>
   		<div id="about_me">
