--- a/what-im-playing.html
+++ b/what-im-playing.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Bradley Collins | What I've Built</title>
+    <title>Bradley Collins | What I'm Playing</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link media="all" type="text/css" rel="stylesheet" href="inner_page.css">
@@ -17,46 +17,46 @@
 
   	<header>
   		<a href="index.html">Home</a>
-  		<a class="active" href="what-ive-built.html">What I've Built</a>
-  		<a href="what-im-playing.html">What I'm Playing</a>
+  		<a href="what-ive-built.html">What I've Built</a>
+  		<a class="active" href="what-im-playing.html">What I'm Playing</a>
   		<a href="#">What I Do</a>
   	</header>
 
   	<div class="container">
-      <h1>What I've Built</h1>
-  			<img class="banner_image" src="img/build3.png" />
+      <h1>What I'm Playing</h1>
+  			<img class="banner_image" src="img/xbox_c2.png" />
           <div id="middle_row_1">
             <div id="col1row1">
-            <img src="img/jasmine.png" />
+            <img class="play_img" src="img/mhw.jpg" />
             <div id="port_link">
-              <a href="https://bradleycollins.github.io/jasmine_bootstrap/">Jasmine Adams LCSW</a>
+              <a href="https://store.steampowered.com/app/582010/MONSTER_HUNTER_WORLD/">Monster Hunter World</a>
             </div>
           </div>
         </div>
 
           <div id="middle_row_2">
             <div id="col1row1">
-              <img src="img/first_port.png" />
+              <img class="play_img" src="img/dc.jpg" />
             <div id="port_link">
-              <a href="https://bradleycollins.github.io/portfolio/">My First Portfolio</a>
+              <a href="https://store.steampowered.com/app/588650/Dead_Cells/">Dead Cells</a>
             </div>
           </div>
         </div>
 
           <div id="middle_row_3">
             <div id="col1row1">
-              <img src="img/gogame.png" />
+              <img class="play_img" src="img/sts.jpg" />
             <div id="port_link">
-              <a href="https://bradleycollins.github.io/gogaming/">Go Gaming Entertainment</a>
+              <a href="https://store.steampowered.com/app/646570/Slay_the_Spire/">Slay the Spire</a>
             </div>
           </div>
         </div>
 
           <div id="middle_row_4">
             <div id="col1row1">
-              <img src="img/google.png" />
+              <img class="play_img" src="img/boi.jpg" />
             <div id="port_link">
-              <a href="https://bradleycollins.github.io/google-homepage/">Google Clone</a>
+              <a href="https://store.steampowered.com/app/113200/The_Binding_of_Isaac/">The Binding of Isaac</a>
             </div>
           </div>
         </div>
