added last page

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <p class="icon_text">What I'm Playing</p>
   		</div>
   		<div id="about_me">
-  			<a href="#"><img src="img/beach2.png" /></a>
-        <p class="icon_text">About Me</p>
+  			<a href="what-i-do.html"><img src="img/beach2.png" /></a>
+        <p class="icon_text">What I Do</p>
   		</div>
   	</div>
 
