--- a/what-i-do.html
+++ b/what-i-do.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Bradley Collins | What I'm Playing</title>
+    <title>Bradley Collins | What I've Built</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link media="all" type="text/css" rel="stylesheet" href="inner_page.css">
@@ -15,59 +15,59 @@
 </head>
   <body>
 
-  	<header>
-  		<a href="index.html">Home</a>
-  		<a href="what-ive-built.html">What I've Built</a>
-  		<a class="active" href="what-im-playing.html">What I'm Playing</a>
-  		<a href="what-i-do.html">What I Do</a>
-  	</header>
+    <header>
+      <a href="index.html">Home</a>
+      <a href="what-ive-built.html">What I've Built</a>
+      <a href="what-im-playing.html">What I'm Playing</a>
+      <a class="active" href="what-i-do.html">What I Do</a>
+    </header>
 
-  	<div class="container">
-      <h1>What I'm Playing</h1>
-  			<img class="banner_image" src="img/xbox_c2.png" />
+    <div class="container">
+      <h1>What I Do</h1>
+        <img class="banner_image" src="img/beach3.png" />
           <div id="middle_row_1">
             <div id="col1row1">
-            <img class="play_img" src="img/mhw.jpg" />
+            <img src="img/beach_do.jpg" />
             <div id="port_link">
-              <a href="https://store.steampowered.com/app/582010/MONSTER_HUNTER_WORLD/">Monster Hunter World</a>
+              <a href="https://bradleycollins.github.io/jasmine_bootstrap/">Escape to the Beach</a>
             </div>
           </div>
         </div>
 
           <div id="middle_row_2">
             <div id="col1row1">
-              <img class="play_img" src="img/dc.jpg" />
+              <img src="img/hiking_do.jpg" />
             <div id="port_link">
-              <a href="https://store.steampowered.com/app/588650/Dead_Cells/">Dead Cells</a>
+              <a href="https://bradleycollins.github.io/portfolio/">Hike with the Wife</a>
             </div>
           </div>
         </div>
 
           <div id="middle_row_3">
             <div id="col1row1">
-              <img class="play_img" src="img/sts.jpg" />
+              <img src="img/coding_do.jpg" />
             <div id="port_link">
-              <a href="https://store.steampowered.com/app/646570/Slay_the_Spire/">Slay the Spire</a>
+              <a href="https://bradleycollins.github.io/gogaming/">Learn to Code</a>
             </div>
           </div>
         </div>
 
           <div id="middle_row_4">
             <div id="col1row1">
-              <img class="play_img" src="img/boi.jpg" />
+              <img src="img/karts_do.jpg" />
             <div id="port_link">
-              <a href="https://store.steampowered.com/app/113200/The_Binding_of_Isaac/">The Binding of Isaac</a>
+              <a href="https://bradleycollins.github.io/google-homepage/">Go Kart with the Kid</a>
             </div>
           </div>
         </div>
 
     </div>
 
-  	<footer>
-  		<div id="copy_text">
-  			<p>Copyright 2018 | Bradley Collins</p>
-  		</div>
-  	</footer>
+    <footer>
+      <div id="copy_text">
+        <p>Copyright 2018 | Bradley Collins</p>
+      </div>
+    </footer>
 
 
 
