--- a/what-ive-built.html
+++ b/what-ive-built.html
@@ -19,7 +19,7 @@
   		<a href="index.html">Home</a>
   		<a class="active" href="what-ive-built.html">What I've Built</a>
   		<a href="what-im-playing.html">What I'm Playing</a>
-  		<a href="#">What I Do</a>
+  		<a href="what-i-do.html">What I Do</a>
   	</header>
 
   	<div class="container">
